Xfce v4.18: Fix invisible items in thunar sidebar

--- a/gtk-3.0/apps/_thunar.scss
+++ b/gtk-3.0/apps/_thunar.scss
@@ -10,11 +10,6 @@
     -gtk-icon-transform:scale(0.72);
 }
 
-scrolledwindow.sidebar treeview.view {
-    background: darken($_sidebar_color, 2%);
-    padding: 1.5px;
-}
-  
 /* path-bar of thunar */
 window.thunar toolbar#location-toolbar > toolitem > widget > widget.linked.path-bar,
 .thunar toolbar {
@@ -49,10 +44,12 @@ window.thunar toolbar#location-toolbar > toolitem > widget > widget.linked.path-
 }
   
 /* thunar sidepane */
-window.thunar paned > scrolledwindow treeview.view {
+.thunar scrolledwindow.sidebar treeview.view {
+    background: darken($_sidebar_color, 2%);
     color: #98abb2;
-    &:hover,  &:selected {
-        background: transparentize($selected_bg_color, 0);
+    padding: 1.5px; 
+    &:hover, &:selected {
+        background: transparentize($selected_bg_color, 0.1);
         color: $selected_fg_color;
         border-radius: 0;
         box-shadow: none;
